# bcvk

./: .gitignore  .packit.yaml  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  build-dependencies.txt
.claude/: settings.local.json
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
containers/anaconda-bootc/: Dockerfile  README.md  bcvk-anaconda-setup.service  bcvk-anaconda-setup.sh  packages.txt
contrib/packaging/: bcvk.spec
crates/agent-linux/: Cargo.toml
crates/bcvk-nbd/: Cargo.toml
crates/bcvk-nbd/src/: dir_walk.rs  erofs.rs  fat32.rs  initramfs.rs  main.rs  nbd.rs  regions.rs
crates/bcvk-qemu/: Cargo.toml
crates/bcvk-qemu/src/: credentials.rs  lib.rs  qemu.rs  qmp.rs  virtiofsd.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/fixtures/: Dockerfile.uki-only
crates/integration-tests/src/: lib.rs  main.rs
crates/integration-tests/src/tests/: anaconda_install.rs  libvirt_base_disks.rs  libvirt_ignition.rs  libvirt_port_forward.rs  libvirt_run_anaconda.rs  libvirt_to_base_disk.rs  libvirt_verb.rs  mount_feature.rs  run_ephemeral.rs  run_ephemeral_ignition.rs  run_ephemeral_scp.rs  run_ephemeral_ssh.rs  to_disk.rs  varlink.rs
crates/itest/: Cargo.toml  README.md
crates/itest-macros/: Cargo.toml
crates/itest-macros/src/: lib.rs
crates/itest-selftest/: Cargo.container.toml  Cargo.toml  Containerfile  Justfile
crates/itest-selftest/src/: main.rs  privileged.rs
crates/itest/src/: harness.rs  junit.rs  lib.rs  privilege.rs  resources.rs
crates/itest/tests/: fixture.rs  harness_integration.rs
crates/kit/: Cargo.toml  bcvk-nbd-aarch64  build.rs
crates/kit/scripts/: bootc-install-to-disk.sh  entrypoint.sh
crates/kit/src/: cache_metadata.rs  containerenv.rs  cpio.rs  credentials.rs  domain_list.rs  entrypoint-linux.sh  entrypoint.rs  envdetect.rs  ephemeral.rs  ephemeral_macos.rs  hostexec.rs  images.rs  init.rs  install_options.rs  instancetypes.rs  kernel.rs  kernel_cmdline.rs  lib.rs  libvirt_upload_disk.rs  main.rs  nbd_macos.rs  nbdkit_macos.rs  qemu.rs  run_ephemeral.rs  run_ephemeral_macos.rs  run_ephemeral_ssh.rs  runrmvm.rs  ssh.rs  ssh_options.rs  to_disk.rs  to_disk_macos.rs  utils.rs  varlink_ipc.rs  virtinstall.rs  vm.rs  vm_helpers.rs  xml_utils.rs
crates/kit/src/anaconda/: install.rs  mod.rs
crates/kit/src/libvirt/: base_disks.rs  base_disks_cli.rs  domain.rs  mod.rs  rm.rs  run.rs  run_anaconda.rs  scp.rs  ssh.rs  upload.rs
crates/kit/src/units/: bcvk-var-ephemeral.service
crates/kit/src/vfkit/: inspect.rs  list.rs  mod.rs  rm.rs  rm_all.rs  run.rs  ssh.rs  start.rs  stop.rs
crates/kit/tests/: run_ephemeral.rs
crates/nbdkit-erofs-plugin/: Cargo.toml
crates/nbdkit-erofs-plugin/src/: dir_walk.rs  erofs.rs  fat32.rs  gpt.rs  initramfs.rs  lib.rs  regions.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: xtask.rs
docs/: AGENTS.md  HACKING.md
docs/src/: SUMMARY.md  installation.md  libvirt-run.md  vs-apple-container.md
docs/src/man/: bcvk-anaconda-install.md  bcvk-anaconda.md  bcvk-ephemeral-run-ssh.md  bcvk-ephemeral-run.md  bcvk-ephemeral-ssh.md  bcvk-ephemeral-test-basic.md  bcvk-ephemeral.md  bcvk-libvirt-run-anaconda.md  bcvk-libvirt-run.md  bcvk-libvirt-to-base-disk.md  bcvk-libvirt-upload.md  bcvk-libvirt.md  bcvk-to-disk.md  bcvk.md
docs/todo/: ephemeral-uefi.md
nu/: bootckit  bootckit.nu  entrypoint.nu  hostexec.nu  images.nu  main.nu  shellconfig.nu  virtinstall.nu
src/: hostexec.rs  main.rs  runscript.rs
