[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Disable automatic binary discovery to avoid conflicts with test target
autobins = false

[[test]]
name = "integration-tests"
path = "src/main.rs"
harness = false

[[bin]]
name = "test-cleanup"
path = "src/bin/cleanup.rs"

[dependencies]
itest = { path = "../itest" }
bcvk = { path = "../kit" }
anyhow = "1"
linkme = "0.3"
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
xshell = { workspace = true }
cfg-if = { workspace = true }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
zlink = "0.4"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tempfile = "3"
uuid = { version = "1.18.1", features = ["v4"] }
camino = "1.1.12"
regex = "1"
rand = { workspace = true }
scopeguard = "1"
cap-std-ext = { workspace = true }

[lints]
workspace = true
