[package]
name = "itest-selftest"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "itest-selftest"
path = "src/main.rs"

[dependencies]
itest = { path = "../itest" }
linkme = "0.3"
rustix = { version = "1", default-features = false, features = ["process"] }

[lints]
workspace = true
